bug fixing of framework

--- a/python_environment/ddsp_synthesize_midi_clean.ipynb
+++ b/python_environment/ddsp_synthesize_midi_clean.ipynb
@@ -24,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-12 19:39:12.954289: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2024-12-17 11:41:56.928094: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -44,8 +44,8 @@
     "from ddsp_piano.default_model import get_model, build_model\n",
     "from ddsp_piano.utils.io_utils import load_midi_as_conditioning\n",
     "from tensorflow.python.client import device_lib\n",
-    "from plots import bar_plot, subplot_input, subplot_output, plot_context\n",
-    "from PS_helper_Functions import save_as_wav, create_midi_and_synthesize\n",
+    "from ADP_plots import bar_plot, subplot_input, subplot_output, plot_context\n",
+    "from ADP_utils import save_as_wav, create_midi_and_synthesize, create_simple_midi_file, create_midi_and_synthesize_glissando\n",
     "import numpy as np\n",
     "from IPython.display import Audio\n",
     "\n",
@@ -319,14 +319,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the function below enables to create a glissando. \n",
+    "# \n",
+    "\n",
     "notedict = {}\n",
-    "notedict[\"beats\"] = [[i] for i in range(20, 100)]\n",
-    "notedict[\"velocities\"] = [[[90]]*len(notedict[\"beats\"])][0]\n",
+    "notedict[\"beats\"] = [[\"C1\"]]\n",
+    "notedict[\"velocities\"] = [[100]]\n",
     "notedict[\"pedal\"] = 0\n",
-    "notedict[\"duration\"] = .05\n",
-    "notedict[\"pause\"] = 0.0\n",
+    "notedict[\"duration\"] = 5\n",
+    "notedict[\"pause\"] = 1.\n",
     "notedict[\"silence\"] = 10\n",
-    "gliss = create_midi_and_synthesize(notedict, model, duration, 7, notenumber = True, f_vibrato = 0, amplitude_vibrato = 1, factor_velocity = 1, callargs = None, save_output=False, output_file=\"out.pkl\")"
+    "gliss_demo = create_midi_and_synthesize_glissando(notedict, model, duration, 0, 4)"
    ]
   },
   {
@@ -335,6 +338,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the function below enables to create a vibrato\n",
+    "# based on the note sequence C2, G3 and D4 \n",
+    "# the vibrato can be controlled with following parameters\n",
+    "# f_vibrato .... frequency of the vibrato\n",
+    "# amplitude_vibrator .... amplitude of vibrato\n",
+    "# factor_velocity .... the velocity of the vibrato\n",
+    "\n",
     "notedict = {}\n",
     "notedict[\"beats\"] = [[\"C2\"],[\"G3\"],[\"D4\"]]\n",
     "notedict[\"velocities\"] = [[100],[100],[100]]\n",
@@ -343,6 +353,13 @@
     "notedict[\"pause\"] = 1.\n",
     "notedict[\"silence\"] = 10\n",
     "vibrato5 = create_midi_and_synthesize(notedict, model, duration, 7, notenumber = False, f_vibrato = 10, amplitude_vibrato = 50, factor_velocity = 1, callargs = None, save_output=False, output_file=\"out.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to listen to the synthesized audio sample"
    ]
   },
   {
@@ -371,6 +388,13 @@
    ],
    "source": [
     "Audio(Friml[\"audio_synth\"][0].numpy(), rate=16000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to save the synthesized audio sample"
    ]
   },
   {
