--- a/python_environment/ddsp_synthesize_midi_clean.ipynb
+++ b/python_environment/ddsp_synthesize_midi_clean.ipynb
@@ -320,7 +320,7 @@
    "outputs": [],
    "source": [
     "# the function below enables to create a glissando. \n",
-    "# \n",
+    "# the last argument sets the step size of the glissando.\n",
     "\n",
     "notedict = {}\n",
     "notedict[\"beats\"] = [[\"C1\"]]\n",
